fix(sass): wrap calcs in calc()

--- a/_assets/scss/components/_posts.scss
+++ b/_assets/scss/components/_posts.scss
@@ -172,5 +172,5 @@
 }
 
 .posts-third {
-  width: 1 / 3 * 100%;
+  width: calc(1 / 3 * 100%);
 }
